fix: techs section refactoring

--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -63,3 +63,20 @@
     background-color: #E8E8E8;
     border-radius: 10px;
 }
+
+@media screen and (max-width: 768px) {
+    .techs {
+        padding: 90px 50px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .techs {
+        padding: 70px 18px;
+    }
+
+    .techs__list {
+        margin-top: 50px;
+        grid-template-columns: repeat(2,84px);
+    }
+}
