--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -57,6 +57,10 @@
 .techs__item {
     width: 90px;
     height: 60px;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 14px;
+    line-height: 17px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -68,6 +72,13 @@
     .techs {
         padding: 90px 50px;
     }
+
+    .techs__item {
+        width: 84px;
+        height: 57px;
+        font-size: 12px;
+        line-height: 15px;
+    }
 }
 
 @media screen and (max-width: 320px) {
@@ -76,7 +87,8 @@
     }
 
     .techs__list {
-        margin-top: 50px;
+        margin: 50px 0 0 0;
+        row-gap: 10px;
         grid-template-columns: repeat(2,84px);
     }
 }
