--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -92,16 +92,23 @@
     }
 }
 
-@media screen and (max-width: 320px) {
-    .about-me {
-        padding: 70px 18px;
-    }
-
+@media screen and (max-width: 680px) {
     .about-me__profile {
         display: flex;
         flex-direction: column-reverse;
         justify-content: center;
-        margin-top: 60px;
+    }
+}
+
+@media screen and (max-width: 680px) {
+    .about-me__photo-wrapper {
+        display: flex;
+        justify-content: center;
+    }
+
+    .about-me__photo {
+        width: 292px;
+        height: 352px;
     }
 
     .about-me__name {
@@ -112,10 +119,23 @@
         line-height: 36px;
         letter-spacing: -0.04em;
     }
+}
 
-    .about-me__photo {
-        width: 292px;
-        height: 352px;
+@media screen and (max-width: 425px) {
+    .about-me {
+        padding: 70px 14px;
+    }
+
+    .about-me__profile {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        margin-top: 60px;
+    }
+
+    .about-me__text {
+        font-size: 11px;
+        line-height: 16px;
     }
 
     .about-me__links {
