--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -75,13 +75,18 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 768px) {
+    .about-project__columns {
+        grid-template-columns: repeat(1,minmax(200px, 600px));
+    }
+}
+
+@media screen and (max-width: 425px) {
     .about-project {
         padding: 70px 18px;
     }
 
     .about-project__columns {
         margin: 60px 0 0 0;
-        grid-template-columns: repeat(1,minmax(200px, 600px));
     }
 }
