--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -40,7 +40,13 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 530px) {
+    .promo__title {
+        font-size: 40px;
+    }
+}
+
+@media screen and (max-width: 425px) {
     .promo__wrapper {
         min-height: 570px;
     }
