remove duplicated styles

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -11,3 +11,26 @@
     color: #000000;
     font-family: 'Inter', Arial, sans-serif;
 }
+
+.section__title {
+    margin: 0 0 23px;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 27px;
+    letter-spacing: -0.04em;
+}
+
+.section__subline {
+    margin: 0;
+    border: 0;
+    border-bottom: 1px solid #000000;
+}
+
+.link {
+    opacity: 1;
+    transition: all .3s ease .1s;
+}
+
+.link:hover {
+    opacity: 0.5;
+}
