--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,6 +7,10 @@
     background-color: #073042;
 }
 
+.header__authorized {
+    background-color: #FFFFFF;
+}
+
 @media screen and (max-width: 768px) {
     .header {
         padding: 0 30px 0 30px;
