--- a/src/components/NavAuth/NavAuth.css
+++ b/src/components/NavAuth/NavAuth.css
@@ -52,11 +52,12 @@
     line-height: 12px;
     color:#222222;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    opacity: 1;
     transition: 0.5s linear;
 }
 
 .nav-auth__link-account:hover {
-    background-color: #3456F3;
+    opacity: 0.8;
 }
 
 .nav-auth__link-ancor {
