add different fixes

--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,12 +1,42 @@
-.logo {
+.logo__main {
     height: 38px;
     width: 38px;
-    background-image: url(../../images/logo.svg);
+    background-image: url(../../images/logo-main.svg);
     background-repeat: no-repeat;
 }
 
-@media screen and (max-width: 768px) {
-    .logo {
-        background-image: url(../../images/logo_auth.svg);
+@media screen and (max-width: 800px) {
+    .logo__main {
+        background-image: url(../../images/logo-smile.svg);
+    }
+}
+
+.logo__main_movies {
+    background-image: url(../../images/logo-circle.svg);
+}
+
+.logo__main_smile {
+    background-image: url(../../images/logo-smile.svg);
+}
+
+@media screen and (max-width: 800px) {
+    .logo__main_movies {
+        background-image: url(../../images/logo-smile.svg);
+    }
+}
+
+.logo__main_profile {
+    background-image: url(../../images/logo-circle.svg);
+}
+
+@media screen and (max-width: 800px) {
+    .logo__main_profile {
+        background-image: url(../../images/logo-dollar.svg);
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .logo__main_profile {
+        background-image: url(../../images/logo-smile.svg);
     }
 }
