--- a/src/components/Authentification/Authentification.css
+++ b/src/components/Authentification/Authentification.css
@@ -15,6 +15,10 @@
     margin: 40px 0 40px 0;
 }
 
+.authentification__form {
+    width: 100%;
+}
+
 .authentification__form-field {
     display: flex;
     flex-direction: column;
@@ -90,6 +94,9 @@
     .authentification__wrapper {
         width: 100%;
         padding: 0 30px 0 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .logo__link {
