--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -11,15 +11,11 @@
     line-height: 16px;
 }
 
-.footer__line {
-    margin: 0;
-    color: #E8E8E8;
-}
-
 .footer__container {
     padding-top: 20px;
     display: flex;
     justify-content: space-between;
+    border-top: 1px solid #E8E8E8;
 }
 
 .footer__copyright {
@@ -39,8 +35,7 @@
 
 .footer__link {
     text-decoration: none;
-    font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 13px;
     line-height: 16px;
     text-align: right;
