--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,6 @@
 .footer {
     padding: 79px 70px 20px 70px;
+    background-color: #FAFAFA;
 }
 
 .footer__info {
@@ -16,6 +17,7 @@
     display: flex;
     justify-content: space-between;
     border-top: 1px solid #E8E8E8;
+    box-sizing: border-box;
 }
 
 .footer__copyright {
