--- a/src/components/More/More.css
+++ b/src/components/More/More.css
@@ -1,36 +1,33 @@
 .more {
-    margin: 0 70px 80px 70px;
+    margin-bottom: 80px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .more__button {
-    width: 100%;
+    width: 320px;
     height: 36px;
     border-radius: 6px;
-    background-color: #F8F8F8;
-    border: none;
+    background-color: transparent;
+    border: 1px solid #E8E8E8;
     outline: none;
     font-weight: 500;
     font-size: 12px;
     line-height: 15px;
     cursor: pointer;
     opacity: 1;
+    transition: 0.5s ease;
 }
 
 .more__button:hover {
     opacity: 0.8;
-}
-
-@media (max-width: 800px) {
-    .more {
-        margin: 0 30px 80px 30px;
-    }
+    background-color: #F9F9F9;
 }
 
 @media (max-width: 425px) {
-    .more {
-        margin: 0 10px 80px 10px;
+
+    .more__button {
+        width: 240px;
     }
 }
