--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -2,8 +2,8 @@
     height: 66px;
     display: flex;
     justify-content: center;
-    color: #FFFFFF;
-    background-color: #000000;
+    color: #000000;
+    background-color: #F5F5F5;
 }
 
 .promo__navtab-list {
@@ -23,7 +23,7 @@
     font-weight: 500;
     font-size: 13px;
     line-height: 16px;
-    color: #FFFFFF;
+    color: #000000;
 }
 
 @media screen and (max-width: 320px) {
