--- a/src/components/Authentification/Authentification.css
+++ b/src/components/Authentification/Authentification.css
@@ -55,13 +55,13 @@
     font-weight: 400;
     font-size: 10px;
     line-height: 12px;
-    color: #FF3055;
+    color: #EE3465;
 }
 
 .authentification__submit-button {
     margin: 69px 0 16px;
     width: 100%;
-    background-color: #3456F3;
+    background-color: #2BE080;
     color: #FFFFFF;
     border-radius: 3px;
     padding: 13px 0 15px;
@@ -69,10 +69,6 @@
     outline: 0;
     transition: all .5s;
     cursor: pointer;
-}
-
-.authentification__submit-button:hover {
-    background-color:#2BE080;
 }
 
 .authentification__help-text {
@@ -87,7 +83,7 @@
 .authentification__help-link {
     margin-left: 6px;
     text-decoration: none;
-    color: #3456F3;
+    color: #2BE080;
 }
 
 @media screen and (max-width: 425px) {
