--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -1,4 +1,5 @@
 .filter-checkbox {
+    margin: 28px 0 39px 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,7 +11,7 @@
 }
 
 .filter-checkbox__label {
-    margin: 0 14px 0 41px;
+    margin: 0 0 0 12px;
     font-weight: 400;
     font-size: 13px;
     line-height: 18px;
@@ -52,8 +53,10 @@
     border-radius: 50%;
 }
   
-.filter-checkbox__input_active + .filter-checkbox__slider {
+.filter-checkbox__input_active + .filter-checkbox__slider:before {
     background-color: #2be080;
+    border: 1px solid #FFFFFF;
+    box-sizing: border-box;
 }
   
 .filter-checkbox__input_active + .filter-checkbox__slider:before {
@@ -62,6 +65,23 @@
 
 @media screen and (max-width: 800px) {
     .filter-checkbox {
-        margin-top: 38px;
+        margin: 40px 0 39px 0;
+    }
+
+    .filter-checkbox__label {
+        font-size: 12px;
+        line-height: 18px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .filter-checkbox {
+        margin: 46px 0 39px 0;
+    }
+
+    .filter-checkbox__label {
+        margin: 0 0 0 13px;
+        font-size: 11px;
+        line-height: 18px;
     }
 }
