--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,21 +3,21 @@
     justify-content: space-between;
     align-items: center;
     height: 74px;
-    padding: 0 70px 0 60px;
-    background-color: #073042;
+    padding: 0 70px 0 70px;
+    background-color: #5C5C5C;
 }
 
 .header__authorized {
     background-color: #FFFFFF;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
     .header {
         padding: 0 30px 0 30px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 425px) {
     .header {
         padding: 0 14px 0 14px;
     }
