--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,66 +1,128 @@
 .movies-card {
+    padding: 6px;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 40px;
+    background-color: #F9F9F9;
+}
+
+.movies-card:last-of-type {
+    margin-bottom: 10px;
+}
+
+.movies-card__thumb-wrapper {
+    width: 220px;
+    height: 122px;
 }
 
 .movies-card__thumb {
     width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
-.movies-card__info {
-    margin-top: 10px;
-    margin-bottom: 25px;
+.movies-card__info .movies-card__data {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.movies-card__info {
+    padding-left: 16px;
 }
 
 .movies-card__title {
     margin: 0;
     font-weight: 500;
-    font-size: 13px;
-    line-height: 16px;
-}
-
-.movies-card__type-save {
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    background-color: #F5F5F5;
-    border: none;
-    outline:none;
-    background-image: url("../../images/heart-white.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    cursor: pointer;
-}
-
-.movies-card__type-saved {
-    background-image: url("../../images/heart-red.svg");
-}
-
-.movies-card__type-delete {
-    background-image: url("../../images/movie-delete.svg");
-    visibility: hidden;
-    opacity: 0;
-    transition: 0.5s linear;
+    font-size: 18px;
+    line-height: 22px;
 }
 
 .movies-card__duration {
-    padding-top: 6px;
-    border-top: 1px solid #E8E8E8;
+    padding-top: 13px;
+    margin: 0;
     font-weight: 400;
     font-size: 11px;
     line-height: 13px;
     color: #A0A0A0;
 }
 
+.movies-card__type-save {
+    margin-top: 30px;
+    width: 14px;
+    height: 12px;
+    border: none;
+    outline:none;
+    background-color: transparent;
+    background-image: url("../../images/heart-grey.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+}
+
+.movies-card__type-save_saved {
+    background-image: url("../../images/heart-red.svg");
+}
+
+.movies-card__type-delete {
+    background-image: url("../../images/movie-delete.svg");
+    opacity: 1;
+    transition: 0.5s linear;
+}
+
 .movies-card_saved {
     cursor: pointer;
 }
 
-.movies-card_saved:hover .movies-card__type-delete {
-    visibility: visible;
-    opacity: 1;
+.movies-card__type-delete:hover {
+    opacity: 0.6;
+}
+
+@media screen and (max-width: 800px) {
+    .movies-card:last-of-type {
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (max-width: 570px) {
+    .movies-card {
+        margin-bottom: 20px;
+        padding: 0;
+        flex-direction: column-reverse;
+    }
+
+    .movies-card__thumb-wrapper {
+        width: 100%;
+        height: 100%;
+    }
+
+    .movies-card__info {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    .movies-card__data {
+        margin: 14px 0 14px 12px;
+    }
+
+    .movies-card__type-save {
+        margin: 16px 16px 0 0;
+    }
+
+    .movies-card__title {
+        font-size: 12px;
+        line-height: 15px;
+    }
+
+    .movies-card__duration {
+        padding-top: 8px;
+        font-size: 11px;
+        line-height: 13px;
+    }
 }
