--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #073042;
+    background-color: #5C5C5C;
     position: relative;
 }
 
@@ -19,11 +19,12 @@
 .promo__title {
     max-width: 730px;
     font-size: 50px;
-    line-height: 1.16;
+    line-height: 58px;
     font-weight: 400;
+    letter-spacing: -0.04em;
     color: #ffffff;
     text-align: center;
-    margin-top: 184px;
+    margin: 184px 0 0;
 }
 
 @media screen and (max-width: 768px) {
