--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,38 +1,46 @@
 .searchform__wrapper {
     margin: 0 70px 0 70px;
-    padding: 80px 0px 83px 0px;
+    padding: 80px 0 0;
     border-bottom: 1px solid #E8E8E8;
 }
 
 .searchform__search-form {
-    position: relative;
     display: flex;
+    flex-direction: column;
+}
+
+.searchform__input-fieldset {
+    padding: 0;
+    margin: 0;
+    border: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .search-form__input {
-    width: 100%;
-    height: 48px;
+    width: calc(100% - 44px);
+    height: 50px;
     box-sizing: border-box;
-    padding-left: 22px;
-    border: 1px solid #E8E8E8;
-    border-radius: 40px;
+    padding-left: 20px;
+    border: none;
+    border-radius: 8px;
+    background-color: #F9F9F9;
     font-weight: 400;
     font-size: 14px;
     line-height: 18px;
 }
 
 .search-form__submit {
-    position: absolute;
-    top: 7px;
-    right: 215px;
-    width: 34px;
-    height: 34px;
-    border-radius: 48px;
+    width: 44px;
+    height: 44px;
+    border-radius: 8px;
+    margin-left: 10px;
     border: none;
-    background-color: #3456F3;
+    background-color: #2BE080;
     background-image: url(../../images/search-icon.svg);
     background-repeat: no-repeat;
-    background-position-y: 10px;
+    background-position-y: center;
     background-position-x: center;
     cursor: pointer;
     opacity: 1;
@@ -46,21 +54,21 @@
 @media screen and (max-width: 800px) {
     .searchform__wrapper {
         margin: 0 30px 0 30px;
-        padding: 60px 0px 56px 0px;
+        padding: 60px 0px 0px 0px;
     }
 
     .searchform__search-form {
         flex-direction: column;
-    }
-
-    .search-form__submit {
-        right: 7px;
     }
 }
 
 @media screen and (max-width: 425px) {
     .searchform__wrapper {
         margin: 0 10px 0 10px;
-        padding: 60px 0px 43px 0px;
+        padding: 60px 0px 0px 0px;
+    }
+
+    .search-form__input {
+        padding-left: 13px;
     }
 }
