--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -102,7 +102,7 @@
     font-size: 13px;
     line-height: 12px;
     color:#222222;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px rgba(109, 108, 108, 0.25);
     opacity: 1;
     transition: 0.5s linear;
 }
@@ -188,6 +188,7 @@
 
     .nav-auth__link {
         font-weight: 500;
+        margin-left: 0;
     }
 
     .nav-auth__link_mobile  {
