--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -40,6 +40,7 @@
 }
 
 .profile__field-name {
+    width: 30%;
     margin: 0;
     font-weight: 500;
     font-size: 11px;
@@ -47,6 +48,7 @@
 }
 
 .profile__field-value {
+    width: 70%;
     margin: 0;
     border: 0;
     outline: 0;
@@ -89,6 +91,14 @@
     font-size: 13px;
     line-height: 16px;
     transition: all 0.5s;
+}
+
+.profile__field-error {
+    margin: 0;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 12px;
+    color: #EE3465;
 }
   
 .profile__exit-button:hover {
