--- a/src/components/Authentification/Authentification.css
+++ b/src/components/Authentification/Authentification.css
@@ -71,6 +71,10 @@
     cursor: pointer;
 }
 
+.authentification__submit-button_disabled {
+    background-color: #bcedd3;
+}
+
 .authentification__help-text {
     margin: 0;
     text-align: center;
