--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -55,6 +55,15 @@
     opacity: 0.8;
 }
 
+.searchform__error {
+    height: 12px;
+    margin: 0;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 12px;
+    color: #EE3465;
+}
+
 @media screen and (max-width: 800px) {
     .searchform__wrapper {
         margin: 0 30px 0 30px;
