--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -3,20 +3,20 @@
     display: flex;
     flex-direction: column;
     margin: 0;
-    padding: 70px 70px 50px 70px;
+    padding: 0 70px 50px 70px;
 
 }
 
 @media (max-width: 800px) {
     .movies-card__list {
-        padding: 70px 30px 50px 30px;
+        padding: 0 30px 50px 30px;
 
     }
 }
 
 @media (max-width: 425px) {
     .movies-card__list {
-        padding: 40px 10px 50px 10px;
+        padding: 0 10px 50px 10px;
     }
 }
 
@@ -48,8 +48,25 @@
 }
 
 @media (max-width: 425px) {
-
     .more__button {
         width: 240px;
+    }
+}
+
+.movies__messages {
+    margin: 0;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 13px;
+    line-height: 18px;
+}
+
+@media (max-width: 425px) {
+    .movies__messages {
+        height: 40px;
+        font-size: 11px;
+        line-height: 18px;
     }
 }
