add server error showing for register and login cases

--- a/src/components/Authentification/Authentification.css
+++ b/src/components/Authentification/Authentification.css
@@ -90,6 +90,15 @@
     color: #2BE080;
 }
 
+.authentification__server-error {
+    font-size: 14px;
+    line-height: 17px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ff7474;
+}
+
 @media screen and (max-width: 425px) {
     .authentification__wrapper {
         width: 100%;
